--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                         <ul>
                             <li>Location: Vladivostok, Russia</li>
                             <li>Hobbies: programming, sport, activity, guitar</li>
-                            <li>Want to work: IT, developer</li>
+                            <li>Want to work: IT, developer, programmer</li>
                         </ul>
                     </p>
                     <p class="list">Education:
