--- a/index.html
+++ b/index.html
@@ -5,73 +5,112 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>karpenych</title>
-    <link rel="icon" type="image/png" href="assets/icon.png">
+    <link rel="icon" type="image/png" href="assets/iconRobot.png">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header><div class="header_footer_width"><h1><p>>> Karpenych</p></h1></div></header>
+    <header><div class="header_footer_width"><h1><p>>> karpenych</p></h1></div></header>
     <div id='page-container'>
         <main style="margin-top: 8rem;">
             <div id='grid-container'>
                 <div id="pic" class="fade1"></div>
                 <div id="title" class="fade2"><h2>Dmitrii Karpenko</h2></div>
+
                 <div id="info" class="fade3">
                     <p class="list">Short info:
                         <ul>
-                            <li>Location: Vladivostok, Russia</li>
-                            <li>Hobbies: programming, sport, activity, guitar</li>
-                            <li>Want to work: IT, developer, programmer</li>
+                            <li>🌏Location: Vladivostok, Russia</li>
+                            <li>🏋️‍♂️Hobbies: programming, sports activity, guitar</li>
+                            <li>🖥️Working interests: Developer, Programmer, Data Scientist</li>
                         </ul>
                     </p>
                     <p class="list">Education:
                         <ul>
-                            <li>University: <a href="https://www.msun.ru/" target="_blank">MSUN</a></li>
-                            <li>Year: 4</li>
-                            <li>Specialization: computer science and engineering</li>
+                            <li>🏢University: <a href="https://www.msun.ru/" target="_blank">MSUN</a></li>
+                            <li>📅Year: 4</li>
+                            <li>🎓Specialization: computer science and engineering</li>
                         </ul>
                     </p>
                     <p class="list">Contacts:
                         <ul>
-                            <li><a href="https://vk.com/karpenychh">vk</a></li>
-                            <li><a href="https://t.me/Sergeant_Karpenko">telegram</a></li>
-                            <li>dmitriy52444@gmail.com</li>
+                            <li>📱<a href="https://vk.com/karpenychh">vk</a></li>
+                            <li>📱<a href="https://t.me/Sergeant_Karpenko">telegram</a></li>
+                            <li>📧dmitriy52444@gmail.com</li>
                         </ul>
                     </p>
                     <p class="list">Extra:
                         <ul>
                             <li>🤖<a href="https://github.com/Karpenych">GitHub</a></li>
-                            <li>📝<a href="https://vladivostok.hh.ru/resume/debffbfbff0c1236b50039ed1f7938756d534d">Resume</a></li>
+                            <li>📝<a href="https://vladivostok.hh.ru/resume/debffbfbff0c1236b50039ed1f7938756d534d">Resume (hh.ru)</a></li>
                         </ul>
                     </p>
                 </div>
-                <div id="experience" class="fade4">
+
+                <div id="skills" class="informaton fade4">
                     <p><center>SKILLS</center></p>
-                    <p class="list">Familiar with:
-                        <ul>
-                            <li>C#, Unity, C++, Python, GO, PHP, JS, HTML, CSS, Lazarus, Assembler (little bit), SQL, Git, Linux, MS Office</li>
-                        </ul>
-                    </p>
-                    <p class="list">Languages:
-                        <ul>
-                            <li>Russian, English</li>
-                        </ul>
-                    </p>
-                    <p class="list">Additional education:
-                        <ul>
-                            <li>Ulearn.me:        <a href="https://ulearn.me/Course/math" target="_blank">introduction to mathematics</a>,
-                                                  <a href="https://ulearn.me/Course/complexity" target="_blank">evaluation of the complexity of algorithms</a>,
-                                                  <a href="https://ulearn.me/Course/BasicProgramming" target="_blank">basics of programming based on C#</a></li>
-                            <li>Hexlet:           <a href="https://ru.hexlet.io/courses/php-basics" target="_blank">php-basics</a>,
-                                                  <a href="https://ru.hexlet.io/courses/python-basics" target="_blank">python-basics</a>,
-                                                  <a href="https://ru.hexlet.io/courses/cli-basics" target="_blank">cli-basics</a></li>
-                            <li>Yandex practicum: <a href="https://practicum.yandex.ru/profile/go-basics" target="_blank">go-basics</a>,
-                                                  <a href="https://practicum.yandex.ru/profile/math-foundations/" target="_blank">math-foundations</a>
-                            <li>Unity learn:      <a href="https://learn.unity.com/pathway/unity-essentials" target="_blank">Unity Essentials</a>,
-                                                  <a href="https://learn.unity.com/pathway/junior-programmer" target="_blank">Junior Programmer</a>,
-                                                  <a href="https://learn.unity.com/pathway/creative-core" target="_blank">Creative Core</a></li>
-                        </ul>
-                    </p>
+                    <div class="hideble">
+                        <p class="list">Familiar with:
+                            <ul>
+                                <li>C#, Python, GO, SQL, Git, Unity, C++, PHP, JS, HTML, CSS, Linux, MS Excel, Assembler</li>
+                            </ul>
+                        </p>
+                        <p class="list">Languages:
+                            <ul>
+                                <li>Russian, English</li>
+                            </ul>
+                        </p>
+                        <p class="list">Additional education:
+                            <ul>
+                                <li>FEFU "digital education":
+                                    <ul class="markable">
+                                        <li><a href="https://dpo.dvfu.ru/data-analyst-pro" target="_blank">Data Analyst: Advanced level</a></li>
+                                    </ul>
+                                </li>
+                                <li>Yandex practicum:
+                                    <ul class="markable">
+                                        <li><a href="https://practicum.yandex.ru/profile/go-basics" target="_blank">go-basics</a></li>
+                                        <li><a href="https://practicum.yandex.ru/profile/math-foundations/" target="_blank">math-foundations</a></li>
+                                    </ul>
+                                </li>
+                                <li>Ulearn.me:
+                                    <ul class="markable">
+                                        <li><a href="https://ulearn.me/Course/math" target="_blank">introduction to mathematics</a></li>
+                                        <li><a href="https://ulearn.me/Course/complexity" target="_blank">evaluation of the complexity of algorithms</a></li>
+                                        <li><a href="https://ulearn.me/Course/BasicProgramming" target="_blank">basics of programming based on C#</a></li>
+                                    </ul>
+                                </li>
+                                <li>Hexlet:
+                                    <ul class="markable">
+                                        <li><a href="https://ru.hexlet.io/courses/php-basics" target="_blank">php-basics</a></li>
+                                        <li><a href="https://ru.hexlet.io/courses/python-basics" target="_blank">python-basics</a></li>
+                                        <li><a href="https://ru.hexlet.io/courses/cli-basics" target="_blank">cli-basics</a></li>
+                                    </ul>
+                                </li>
+                                <li>Unity learn:
+                                    <ul class="markable">
+                                        <li><a href="https://learn.unity.com/pathway/unity-essentials" target="_blank">Unity Essentials</a></li>
+                                        <li><a href="https://learn.unity.com/pathway/junior-programmer" target="_blank">Junior Programmer</a></li>
+                                        <li><a href="https://learn.unity.com/pathway/creative-core" target="_blank">Creative Core</a></li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </p>
+                    </div>
                 </div>
+
+                <div id="achievements" class="informaton fade5">
+                    <p><center>ACHIEVEMENTS</center></p>
+                    <div class="hideble">
+                        <ul class="markable">
+                            <li>🥇<span style="color: gold; font-weight: bold;">1st place</span> in
+                                «<a href="https://www.msun.ru/ru/news/id-8892" target="_blank">V University championship of professional skills "Young professionals"</a>»<br>
+                                Competence: "Development of computer games and multimedia applications"<br>
+                                <a href="https://www.msun.ru/img/n__2023__bf77769d01602617161cb2bc9c0811c2.jpg/3/image.jpg">˙✧˖°📷 ༘ ⋆｡˚</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+
             </div>
         </main>
         <footer><div class="header_footer_width"><h1>© karpenych 2023</h1></div></footer>
