--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
                 <div id="skills" class="informaton fade4">
                     <p><center>SKILLS</center></p>
                     <div class="hideble">
-                        <p class="list">Familiar with:
+                        <p class="list">Hard skills:
                             <ul>
-                                <li>C#, Python, GO, SQL, Git, Unity, C++, PHP, JS, HTML, CSS, Linux, MS Excel, Assembler</li>
+                                <li>C#, Python, GO, SQL, Git, MS Excel, Linux, C++, Fullstack</li>
                             </ul>
                         </p>
                         <p class="list">Languages:
