--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div id='page-container'>
         <main style="margin-top: 8rem;">
             <div id='grid-container'>
+
                 <div id="pic" class="fade1"></div>
                 <div id="title" class="fade2"><h2>Dmitrii Karpenko</h2></div>
 
@@ -20,8 +21,8 @@
                     <p class="list">Short info:
                         <ul>
                             <li>🌏Location: Vladivostok, Russia</li>
-                            <li>🏋️‍♂️Hobbies: programming, sports activity, guitar</li>
-                            <li>🖥️Working interests: Developer, Programmer, Data Scientist</li>
+                            <li>🏋️‍♂️Hobbies: self-education, sport activity, guitar</li>
+                            <li>🖥️Working interests: Data Science, Data & ML Engineering</li>
                         </ul>
                     </p>
                     <p class="list">Education:
@@ -33,12 +34,11 @@
                     </p>
                     <p class="list">Contacts:
                         <ul>
-                            <li>📱<a href="https://vk.com/karpenychh">vk</a></li>
                             <li>📱<a href="https://t.me/Sergeant_Karpenko">telegram</a></li>
                             <li>📧dmitriy52444@gmail.com</li>
                         </ul>
                     </p>
-                    <p class="list">Extra:
+                    <p class="list">Links:
                         <ul>
                             <li>🤖<a href="https://github.com/Karpenych">GitHub</a></li>
                             <li>📝<a href="https://vladivostok.hh.ru/resume/debffbfbff0c1236b50039ed1f7938756d534d">Resume (hh.ru)</a></li>
@@ -51,54 +51,28 @@
                     <div class="hideble">
                         <p class="list">Hard skills:
                             <ul>
-                                <li>C#, Python, GO, SQL, Git, MS Excel, Linux, C++, Fullstack</li>
+                                <li>Python, C#, SQL, Git, MS SQL Server, MS Excel, Power BI, Linux, Jupiter Notebook, NumPy,
+                                    Pandas, Matplotlib, Scikit-learn, SymPy, OpenCV, Docker, Apache Airflow</li>
                             </ul>
                         </p>
                         <p class="list">Languages:
                             <ul>
-                                <li>Russian, English</li>
-                            </ul>
-                        </p>
-                        <p class="list">Additional education:
-                            <ul>
-                                <li>FEFU "digital education":
-                                    <ul class="markable">
-                                        <li><a href="https://dpo.dvfu.ru/data-analyst-pro" target="_blank">Data Analyst: Advanced level</a></li>
-                                    </ul>
-                                </li>
-                                <li>Yandex practicum:
-                                    <ul class="markable">
-                                        <li><a href="https://practicum.yandex.ru/profile/go-basics" target="_blank">go-basics</a></li>
-                                        <li><a href="https://practicum.yandex.ru/profile/math-foundations/" target="_blank">math-foundations</a></li>
-                                    </ul>
-                                </li>
-                                <li>Ulearn.me:
-                                    <ul class="markable">
-                                        <li><a href="https://ulearn.me/Course/math" target="_blank">introduction to mathematics</a></li>
-                                        <li><a href="https://ulearn.me/Course/complexity" target="_blank">evaluation of the complexity of algorithms</a></li>
-                                        <li><a href="https://ulearn.me/Course/BasicProgramming" target="_blank">basics of programming based on C#</a></li>
-                                    </ul>
-                                </li>
-                                <li>Hexlet:
-                                    <ul class="markable">
-                                        <li><a href="https://ru.hexlet.io/courses/php-basics" target="_blank">php-basics</a></li>
-                                        <li><a href="https://ru.hexlet.io/courses/python-basics" target="_blank">python-basics</a></li>
-                                        <li><a href="https://ru.hexlet.io/courses/cli-basics" target="_blank">cli-basics</a></li>
-                                    </ul>
-                                </li>
-                                <li>Unity learn:
-                                    <ul class="markable">
-                                        <li><a href="https://learn.unity.com/pathway/unity-essentials" target="_blank">Unity Essentials</a></li>
-                                        <li><a href="https://learn.unity.com/pathway/junior-programmer" target="_blank">Junior Programmer</a></li>
-                                        <li><a href="https://learn.unity.com/pathway/creative-core" target="_blank">Creative Core</a></li>
-                                    </ul>
-                                </li>
+                                <li>Russian (native), English (~B2)</li>
                             </ul>
                         </p>
                     </div>
                 </div>
 
-                <div id="achievements" class="informaton fade5">
+                <div id="education" class="informaton fade5">
+                    <p><center>ADDITIONAL EDUCATION</center></p>
+                    <div class="hideble">
+                        <ul class="markable">
+                            <li>FEFU "digital education": <a href="https://dpo.dvfu.ru/data-analyst-pro" target="_blank">Data Analyst: Advanced level</a></li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div id="achievements" class="informaton fade6">
                     <p><center>ACHIEVEMENTS</center></p>
                     <div class="hideble">
                         <ul class="markable">
@@ -113,7 +87,7 @@
 
             </div>
         </main>
-        <footer><div class="header_footer_width"><h1>© karpenych 2023</h1></div></footer>
+        <footer><div class="header_footer_width"><h1>© karpenych 2024</h1></div></footer>
     </div>
 </body>
 </html>
