add innopolis course and olympiad win

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
                     <div class="hideble">
                         <p class="list">Hard skills:
                             <ul>
-                                <li>Python, C#, SQL, Git, MS SQL Server, MS Excel, Power BI, Linux, Jupiter Notebook, NumPy,
-                                    Pandas, Matplotlib, Scikit-learn, SymPy, OpenCV, Docker, Apache Airflow</li>
+                                <li>Python, C#, SQL, Git, MS SQL Server, PostgreSQL, MS Excel, Power BI, Linux, Jupiter Notebook, NumPy,
+                                    Pandas, Matplotlib, Scikit-learn, OpenCV, Docker, Apache Airflow</li>
                             </ul>
                         </p>
                         <p class="list">Languages:
@@ -67,7 +67,19 @@
                     <p><center>ADDITIONAL EDUCATION</center></p>
                     <div class="hideble">
                         <ul class="markable">
-                            <li>FEFU "digital education": <a href="https://dpo.dvfu.ru/data-analyst-pro" target="_blank">Data Analyst: Advanced level</a></li>
+                            <li>
+                                FEFU "digital education": <a href="https://dpo.dvfu.ru/data-analyst-pro" target="_blank">Data Analyst: Advanced level</a>
+                                <br>
+                                -> Data Analytics
+                                -> ML Engineering
+                                -> Data Engineering (main competence)
+                            </li>
+                            <li>
+                                Innopolis University: Principles of software product development management. New production technologies
+                                <br>
+                                -> Flutter development (Learn Mobile development)
+                                -> IT Product Development (Learn how to create products)
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -77,9 +89,13 @@
                     <div class="hideble">
                         <ul class="markable">
                             <li>🥇<span style="color: gold; font-weight: bold;">1st place</span> in
-                                «<a href="https://www.msun.ru/ru/news/id-8892" target="_blank">V University championship of professional skills "Young professionals"</a>»<br>
-                                Competence: "Development of computer games and multimedia applications"<br>
-                                <a href="https://www.msun.ru/img/n__2023__bf77769d01602617161cb2bc9c0811c2.jpg/3/image.jpg">˙✧˖°📷 ༘ ⋆｡˚</a>
+                                «<a href="https://www.msun.ru/ru/news/id-8892" target="_blank">V University championship of professional skills "Young professionals"</a>»
+                                <br>
+                                Competence: "Development of computer games and multimedia applications"
+                            </li>
+                            <li>🥇<span style="color: gold; font-weight: bold;">1st place</span> in
+                                «<a href="https://olymp.action.group/" target="_blank">IX All-Russian student Olympiad "Aсtionada"</a>»<br>
+                                Competence: "IT"<br>
                             </li>
                         </ul>
                     </div>
