add skill span background and line height

--- a/index.html
+++ b/index.html
@@ -51,13 +51,33 @@
                     <div class="hideble">
                         <p class="list">Hard skills:
                             <ul>
-                                <li>Python, C#, SQL, Git, MS SQL Server, PostgreSQL, MS Excel, Power BI, Linux, Jupiter Notebook, NumPy,
-                                    Pandas, Matplotlib, Scikit-learn, OpenCV, Docker, Apache Airflow</li>
+                                <li class="skill-li">
+                                    <span class="skill">Python</span>,
+                                    <span class="skill">C#</span>,
+                                    <span class="skill">SQL</span>,
+                                    <span class="skill">Git</span>,
+                                    <span class="skill">MS SQL Server</span>,
+                                    <span class="skill">PostgreSQL</span>,
+                                    <span class="skill">MS Excel</span>,
+                                    <span class="skill">Power BI</span>,
+                                    <span class="skill">Linux</span>,
+                                    <span class="skill">Jupiter Notebook</span>,
+                                    <span class="skill">NumPy</span>,
+                                    <span class="skill">Pandas</span>,
+                                    <span class="skill">Matplotlib</span>,
+                                    <span class="skill">Scikit-learn</span>,
+                                    <span class="skill">OpenCV</span>,
+                                    <span class="skill">Docker</span>,
+                                    <span class="skill">Apache Airflow</span>
+                                </li>
                             </ul>
                         </p>
                         <p class="list">Languages:
                             <ul>
-                                <li>Russian (native), English (~B1)</li>
+                                <li class="skill-li">
+                                    <span class="skill">Russian (native)</span>,
+                                    <span class="skill">English (B1)</span>
+                                </li>
                             </ul>
                         </p>
                     </div>
@@ -71,13 +91,16 @@
                                 FEFU "digital education": <a href="https://dpo.dvfu.ru/data-analyst-pro" target="_blank">Data Analyst: Advanced level</a>
                                 <br>
                                 -> Data Analytics
+                                <br>
                                 -> ML Engineering
+                                <br>
                                 -> Data Engineering (main competence)
                             </li>
                             <li>
                                 Innopolis University: Principles of software product development management. New production technologies
                                 <br>
                                 -> Flutter development (Learn Mobile development)
+                                <br>
                                 -> IT Product Development (Learn how to create products)
                             </li>
                         </ul>
@@ -92,10 +115,15 @@
                                 «<a href="https://www.msun.ru/ru/news/id-8892" target="_blank">V University championship of professional skills "Young professionals"</a>»
                                 <br>
                                 Competence: "Development of computer games and multimedia applications"
+                                <br>
+                                2023
                             </li>
                             <li>🥇<span style="color: gold; font-weight: bold;">1st place</span> in
-                                «<a href="https://olymp.action.group/" target="_blank">IX All-Russian student Olympiad "Aсtionada"</a>»<br>
-                                Competence: "IT"<br>
+                                «<a href="https://olymp.action.group/" target="_blank">IX All-Russian student Olympiad "Aсtionada"</a>»
+                                <br>
+                                Competence: "IT"
+                                <br>
+                                2024
                             </li>
                         </ul>
                     </div>
