--- a/index.html
+++ b/index.html
@@ -52,22 +52,25 @@
                         <p class="list">Hard skills:
                             <ul>
                                 <li class="skill-li">
-                                    <span class="skill">Python</span>,
-                                    <span class="skill">C#</span>,
-                                    <span class="skill">SQL</span>,
-                                    <span class="skill">Git</span>,
-                                    <span class="skill">MS SQL Server</span>,
-                                    <span class="skill">PostgreSQL</span>,
-                                    <span class="skill">MS Excel</span>,
-                                    <span class="skill">Power BI</span>,
-                                    <span class="skill">Linux</span>,
-                                    <span class="skill">Jupiter Notebook</span>,
-                                    <span class="skill">NumPy</span>,
-                                    <span class="skill">Pandas</span>,
-                                    <span class="skill">Matplotlib</span>,
-                                    <span class="skill">Scikit-learn</span>,
-                                    <span class="skill">OpenCV</span>,
-                                    <span class="skill">Docker</span>,
+                                    <span class="skill">Python</span>
+                                    <span class="skill">C#</span>
+                                    <span class="skill">SQL</span>
+                                    <span class="skill">NoSQL</span>
+                                    <span class="skill">Git</span>
+                                    <span class="skill">MS SQL Server</span>
+                                    <span class="skill">PostgreSQL</span>
+                                    <span class="skill">MongoDB</span>
+                                    <span class="skill">MS Excel</span>
+                                    <span class="skill">Power BI</span>
+                                    <span class="skill">Linux</span>
+                                    <span class="skill">Jupiter Notebook</span>
+                                    <span class="skill">NumPy</span>
+                                    <span class="skill">Pandas</span>
+                                    <span class="skill">Matplotlib</span>
+                                    <span class="skill">Scikit-learn</span>
+                                    <span class="skill">PyArrow</span>
+                                    <span class="skill">OpenCV</span>
+                                    <span class="skill">Docker</span>
                                     <span class="skill">Apache Airflow</span>
                                 </li>
                             </ul>
@@ -75,7 +78,7 @@
                         <p class="list">Languages:
                             <ul>
                                 <li class="skill-li">
-                                    <span class="skill">Russian (native)</span>,
+                                    <span class="skill">Russian (native)</span>
                                     <span class="skill">English (B1)</span>
                                 </li>
                             </ul>
