--- a/index.html
+++ b/index.html
@@ -57,13 +57,14 @@
                                     <span class="skill">SQL</span>
                                     <span class="skill">NoSQL</span>
                                     <span class="skill">Git</span>
-                                    <span class="skill">MS SQL Server</span>
+                                    <span class="skill">MSSQLServer</span>
                                     <span class="skill">PostgreSQL</span>
                                     <span class="skill">MongoDB</span>
-                                    <span class="skill">MS Excel</span>
-                                    <span class="skill">Power BI</span>
+                                    <span class="skill">S3</span>
+                                    <span class="skill">ClickHouse</span>
+                                    <span class="skill">MSExcel</span>
+                                    <span class="skill">PowerBI</span>
                                     <span class="skill">Linux</span>
-                                    <span class="skill">Jupiter Notebook</span>
                                     <span class="skill">NumPy</span>
                                     <span class="skill">Pandas</span>
                                     <span class="skill">Matplotlib</span>
@@ -71,7 +72,9 @@
                                     <span class="skill">PyArrow</span>
                                     <span class="skill">OpenCV</span>
                                     <span class="skill">Docker</span>
-                                    <span class="skill">Apache Airflow</span>
+                                    <span class="skill">ApacheAirflow</span>
+                                    <span class="skill">ApacheNiFi</span>
+                                    <span class="skill">YandexCloud</span>
                                 </li>
                             </ul>
                         </p>
