--- a/index.html
+++ b/index.html
@@ -22,13 +22,12 @@
                         <ul>
                             <li>🌏Location: Vladivostok, Russia</li>
                             <li>🏋️‍♂️Hobbies: self-education, sport activity, guitar</li>
-                            <li>🖥️Working interests: Data Science, Data & ML Engineering</li>
+                            <li>🖥️Working interests: Data Engineering</li>
                         </ul>
                     </p>
                     <p class="list">Education:
                         <ul>
                             <li>🏢University: <a href="https://www.msun.ru/" target="_blank">MSUN</a></li>
-                            <li>📅Year: 4</li>
                             <li>🎓Specialization: computer science and engineering</li>
                         </ul>
                     </p>
